Fixed flickering boostrap and css

--- a/src/app/static/css/custom.css
+++ b/src/app/static/css/custom.css
@@ -1,3 +1,7 @@
 pre {
     background-color: transparent !important; 
 }
+
+body {
+    background-color:#6a4a4a;
+}
